# gmm-hmm

./: CMakeLists.txt  README.md
demo/: MotionData.cpp  MotionData.hpp  example_data.csv  main.cpp  main.hpp
lib/: aliases.hpp  gmm.cpp  gmm.hpp  hmm.cpp  hmm.hpp  mvn.cpp  mvn.hpp
